--- a/ami.html
+++ b/ami.html
@@ -86,7 +86,7 @@
       <img class="logojb" src="./imagenes/logo.png" alt="">
       <div class="texto-contenido">
         <h1>Julieta Blanco</h1>
-        <h2>Diseño ux/ ui</h2>
+        <h2>Diseño UX/UI</h2>
         <p class="slogan">"Innovando en cada clic, inspirando en cada detalle."</p>
       </div>
     </div>
@@ -161,7 +161,7 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
       <div class="col-md-4 col-apartado">
-        <h3>COMPRESIÓN DEL USUARIO</h3>
+        <h3>COMPRENSIÓN DEL USUARIO</h3>
       </div>
     </div>
   </div>
