--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <img class="logojb" src="./imagenes/logo.png" alt="">
           <div class="texto-contenido">
             <h1>Julieta Blanco</h1>
-            <h2>Diseño ux/ ui</h2>
+            <h2>Diseño UX/UI</h2>
             <p class="slogan">"Innovando en cada clic, inspirando en cada detalle"</p>
           </div>
         </div>
@@ -227,7 +227,8 @@
         <svg class="icono-flaticon" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24">
           <path d="m4.5,15h8c.827,0,1.5-.673,1.5-1.5v-1c0-.827-.673-1.5-1.5-1.5H4.5c-.827,0-1.5.673-1.5,1.5v1c0,.827.673,1.5,1.5,1.5Zm-.5-2.5c0-.276.224-.5.5-.5h8c.276,0,.5.224.5.5v1c0,.276-.224.5-.5.5H4.5c-.276,0-.5-.224-.5-.5v-1Zm12.5,7.5h3c.827,0,1.5-.673,1.5-1.5v-6c0-.827-.673-1.5-1.5-1.5h-3c-.827,0-1.5.673-1.5,1.5v6c0,.827.673,1.5,1.5,1.5Zm-.5-7.5c0-.276.224-.5.5-.5h3c.276,0,.5.224.5.5v6c0,.276-.224.5-.5.5h-3c-.276,0-.5-.224-.5-.5v-6Zm-11.5,7.5h8c.827,0,1.5-.673,1.5-1.5v-1c0-.827-.673-1.5-1.5-1.5H4.5c-.827,0-1.5.673-1.5,1.5v1c0,.827.673,1.5,1.5,1.5Zm-.5-2.5c0-.276.224-.5.5-.5h8c.276,0,.5.224.5.5v1c0,.276-.224.5-.5.5H4.5c-.276,0-.5-.224-.5-.5v-1ZM19.5,1H4.5C2.019,1,0,3.019,0,5.5v13c0,2.481,2.019,4.5,4.5,4.5h15c2.481,0,4.5-2.019,4.5-4.5V5.5c0-2.481-2.019-4.5-4.5-4.5Zm3.5,17.5c0,1.93-1.57,3.5-3.5,3.5H4.5c-1.93,0-3.5-1.57-3.5-3.5v-9.5h22v9.5Zm0-10.5H1v-2.5c0-1.93,1.57-3.5,3.5-3.5h15c1.93,0,3.5,1.57,3.5,3.5v2.5Zm-12-3c0,.552-.448,1-1,1s-1-.448-1-1,.448-1,1-1,1,.448,1,1Zm-6,0c0,.552-.448,1-1,1s-1-.448-1-1,.448-1,1-1,1,.448,1,1Zm3,0c0,.552-.448,1-1,1s-1-.448-1-1,.448-1,1-1,1,.448,1,1Z"/>
         </svg>
-        <h4>Diseño Ux</h4>
+        <h4>Diseño UX</h4>
+        <h5> Diseño de experiencia de usuario</h5>
 
         <p>
           - Investigaciones de usuario para comprender las necesidades,
@@ -243,7 +244,9 @@
         <svg class="icono-flaticon" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24">
           <path d="m21,11.5v8c0,2.481-2.019,4.5-4.5,4.5H4.5c-2.481,0-4.5-2.019-4.5-4.5V7.5C0,5.019,2.019,3,4.5,3h9c.276,0,.5.224.5.5s-.224.5-.5.5H4.5c-1.93,0-3.5,1.57-3.5,3.5v12c0,1.93,1.57,3.5,3.5,3.5h12c1.93,0,3.5-1.57,3.5-3.5v-8c0-.276.224-.5.5-.5s.5.224.5.5Zm2.162-6.607l-9.183,9.825c-.048.796-.348,1.545-.896,2.145-.662.723-1.603,1.138-2.583,1.138h-4c-.485,0-.928-.224-1.214-.612-.287-.39-.369-.879-.225-1.343.5-1.61,2.039-4.469,4.632-4.97.183-.035.367-.04.551-.047C19.063.885,19.094.854,19.11.838c1.118-1.117,2.936-1.114,4.052.002,1.115,1.117,1.115,2.936,0,4.053Zm-9.341,8.528l2.066-2.21c-.323-1.18-1.355-2.06-2.573-2.188-.664.763-1.304,1.5-1.877,2.159.419.126.823.31,1.18.58.579.436.988,1.011,1.204,1.66Zm-.832.849c-.06-.675-.406-1.282-.975-1.711-.612-.461-1.39-.647-2.132-.501-2.13.411-3.433,2.886-3.867,4.284-.049.157-.021.322.075.453.096.13.246.205.409.205h4c.7,0,1.372-.296,1.845-.812.479-.524.708-1.205.645-1.918ZM22.454,1.547c-.726-.728-1.91-.728-2.637-.002-.075.085-2.976,3.421-5.749,6.61,1.146.323,2.102,1.147,2.585,2.236l5.789-6.193c.737-.739.737-1.923.011-2.65Z"/>
         </svg>
-        <h4>Diseño de interfaz de usuario</h4>
+
+        <h4>Diseño UI</h4>
+        <h5>Diseño de interfaz de usuario</h5>
 
         <p>
           - Creación de la estética visual del producto. <br>
