--- a/sobremi.html
+++ b/sobremi.html
@@ -87,7 +87,7 @@
         <img class="logojb" src="./imagenes/logo.png" alt="">
         <div class="texto-contenido">
           <h1>Julieta Blanco</h1>
-          <h2>Diseño ux/ ui</h2>
+          <h2>Diseño UX/UI</h2>
           <p class="slogan">"Innovando en cada clic, inspirando en cada detalle."</p>
         </div>
       </div>
