--- a/ami.html
+++ b/ami.html
@@ -152,8 +152,13 @@
           - Iteración de diseños para versiones móviles y web,
             asegurando una experiencia coherente y eficiente en todos los dispositivos.
         </p>
-   
 
+        <h4>Herramientas empleadas:</h4>
+        <p>
+          - Diseño centrado en el usuario <br>
+          - Design thinking <br>
+          - Figma
+        </p>
       </div>
     </div>
   </div>
