--- a/doñalupe.html
+++ b/doñalupe.html
@@ -153,6 +153,13 @@
           - Iteración de Diseño: Implementación de mejoras basadas en estudios de facilidad de uso y  accesibilidad, con iteraciones continuas en versiones móviles y web.
         </p>
 
+        <h4>Herramientas empleadas:</h4>
+        <p>
+          - Diseño centrado en el usuario <br>
+          - Design thinking <br>
+          - Figma
+        </p>
+
       </div>
     </div>
     </div>
