--- a/trasciende.html
+++ b/trasciende.html
@@ -144,8 +144,13 @@
           - Iteración de diseños para versiones móviles y web para adaptar la experiencia a diferentes dispositivos y resoluciones, basándome en feedback y pruebas <br>
           continuas.
         </p>
+        <h4>Herramientas empleadas:</h4>
+        <p>
+          - Diseño centrado en el usuario <br>
+          - Design thinking <br>
+          - Figma
+        </p>
       </div>
-
       </div>
       </div>
 
