--- a/trasciende.html
+++ b/trasciende.html
@@ -110,7 +110,7 @@
 
         <h4>Producto:</h4>
         <p>
-          “Trasciende” es una iniciativa de interés público que, a través de una aplicación móvil y un sitio web responsivo,  permite a personas adultas aprendera fundar <br>
+          “Trasciende” es una iniciativa de interés público que, a través de una aplicación móvil y un sitio web responsivo,  permite a personas adultas aprender a fundar <br>
           una empresa.
       
         </p>
